txlongpoll NEWS
+++++++++++++++

Changes and improvements to txlongpoll, grouped by release.

NEXT
----